# termux-dev-setup

./: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
src/termux_dev_setup/: cli.py  config.py  gcloud.py  interactive.py  otel.py  postgres.py  redis.py
src/termux_dev_setup/utils/: __init__.py  banner.py  lock.py  shell.py  status.py  syntax_themes.py
tests/: conftest.py  test_cli.py  test_config_validation.py  test_gcloud.py  test_interactive.py  test_otel.py  test_postgres.py  test_redis.py  test_syntax_themes.py  test_utils.py  test_version_management.py  test_views.py
