[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termux-dev-setup"
version = "0.1.0"
description = "Termux development environment setup tool (PostgreSQL, Redis, etc.)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "dhruv13x", email = "dhruv13x@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
tds = "termux_dev_setup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v -ra --strict-markers"
